[package]
name = "fj"
version = "0.6.0"
edition = "2021"

description = "The world needs another CAD program."
readme = "../../README.md"
homepage = "https://www.fornjot.app/"
repository = "https://github.com/hannobraun/fornjot"
license = "0BSD"
keywords = ["cad", "programmatic", "code-cad"]
categories = ["encoding", "mathematics", "rendering"]

[features]
default = []
wasm_models = ["wasm-bindgen"]
serialization = ["serde"]

[dependencies]
serde = { version = "1.0.7", optional = true }
wasm-bindgen = { version = "0.2.80", optional = true }
